[package]
name = "rust-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.4"
aws_lambda_events = "0.13.1"
http = "1.0.0"
lambda_runtime = "0.9.1"
serde = "1.0.196"
serde_json = "1.0.113"
tokio = "1.35.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"